added featured section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 					<button id="menuBtn" class="mobile">
 						<i class="fa-solid fa-bars menu-icon"></i>
 					</button>
-
 				</div>
 			</nav>
 		</header>
@@ -55,6 +54,61 @@
 			</div>
 			<div class="banner-hi">Hi there</div>
 		</section>
+		<section id="featured-section">
+			<div class="container">
+				<h2 class="section-title">
+					Take a Look at What We Have are Doing!
+				</h2>
+				<p class="section-title-description">
+					Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+					Donec odio. Quisque volutpat mattis eros. Nullam malesuada
+					erat ut turpis. Suspendisse urna nibh, viverra non, semper
+					suscipit, posuere a, pede.
+				</p>
+				<div class="featured-grid">
+					<div class="features">
+						<div class="feature-icon">
+							<i class="fa-solid fa-users"></i>
+						</div>
+						<h3 class="feature-title" >Expert teachers</h3>
+						<p class="feture-description" >
+							Donec odio. Quisque volutpat mattis eros. Nullam
+							malesuada
+						</p>
+					</div>
+					<div class="features">
+						<div class="feature-icon">
+							<i class="fa-solid fa-users"></i>
+						</div>
+						<h3 class="feature-title" >Expert teachers</h3>
+						<p class="feture-description" >
+							Donec odio. Quisque volutpat mattis eros. Nullam
+							malesuada
+						</p>
+					</div>
+					<div class="features">
+						<div class="feature-icon">
+							<i class="fa-solid fa-users"></i>
+						</div>
+						<h3 class="feature-title" >Expert teachers</h3>
+						<p class="feture-description" >
+							Donec odio. Quisque volutpat mattis eros. Nullam
+							malesuada
+						</p>
+					</div>
+					<div class="features">
+						<div class="feature-icon">
+							<i class="fa-solid fa-users"></i>
+						</div>
+						<h3 class="feature-title" >Expert teachers</h3>
+						<p class="feture-description" >
+							Donec odio. Quisque volutpat mattis eros. Nullam
+							malesuada
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
 		<div id="mobileMenu" class="mobile">
 			<ul class="mobile-menu">
 				<li>Home</li>
@@ -70,17 +124,17 @@
 		</div>
 
 		<script>
-			let menuBtn = document.getElementById('menuBtn');
-			let closeBtn = document.getElementById('closeBtn');
-			let mobileMenu = document.getElementById('mobileMenu');
+			let menuBtn = document.getElementById("menuBtn");
+			let closeBtn = document.getElementById("closeBtn");
+			let mobileMenu = document.getElementById("mobileMenu");
 
-			menuBtn.addEventListener('click', () =>{
-				mobileMenu.classList.add('active')
-			})
+			menuBtn.addEventListener("click", () => {
+				mobileMenu.classList.add("active");
+			});
 
-			closeBtn.addEventListener('click', function(){
-				mobileMenu.classList.remove('active')
-			})
+			closeBtn.addEventListener("click", function () {
+				mobileMenu.classList.remove("active");
+			});
 		</script>
 	</body>
 </html>
