--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 						<div class="feature-icon">
 							<i class="fa-solid fa-users"></i>
 						</div>
-						<h3 class="feature-title" >Expert teachers</h3>
-						<p class="feture-description" >
+						<h3 class="feature-title">Expert teachers</h3>
+						<p class="feture-description">
 							Donec odio. Quisque volutpat mattis eros. Nullam
 							malesuada
 						</p>
@@ -80,8 +80,8 @@
 						<div class="feature-icon">
 							<i class="fa-solid fa-users"></i>
 						</div>
-						<h3 class="feature-title" >Expert teachers</h3>
-						<p class="feture-description" >
+						<h3 class="feature-title">Expert teachers</h3>
+						<p class="feture-description">
 							Donec odio. Quisque volutpat mattis eros. Nullam
 							malesuada
 						</p>
@@ -90,8 +90,8 @@
 						<div class="feature-icon">
 							<i class="fa-solid fa-users"></i>
 						</div>
-						<h3 class="feature-title" >Expert teachers</h3>
-						<p class="feture-description" >
+						<h3 class="feature-title">Expert teachers</h3>
+						<p class="feture-description">
 							Donec odio. Quisque volutpat mattis eros. Nullam
 							malesuada
 						</p>
@@ -100,11 +100,72 @@
 						<div class="feature-icon">
 							<i class="fa-solid fa-users"></i>
 						</div>
-						<h3 class="feature-title" >Expert teachers</h3>
-						<p class="feture-description" >
+						<h3 class="feature-title">Expert teachers</h3>
+						<p class="feture-description">
 							Donec odio. Quisque volutpat mattis eros. Nullam
 							malesuada
 						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section id="students">
+			<div class="students-grid">
+				<div class="students-col">
+					<img
+						class="students-img"
+						src="assets/img/1.jpg"
+						alt="students"
+					/>
+				</div>
+				<div class="students-col">
+					<h3 class="section-title">Enjoy Your Best Student Life</h3>
+					<p class="section-title-description">
+						ed pretium, ligula sollicitudin laoreet viverra, tortor
+						libero sodales leo, eget blandit nunc tortor eu nibh.
+						Nullam mollis. Ut justo. Suspendisse potenti.
+					</p>
+					<div class="students-grid">
+						<div class="student-col">
+							<h5>
+								<span class="student-num">1/</span>
+								<span class="student-title">Search for your course</span>
+							</h5>
+							<p class="student-des">
+								Pellentesque odio nisi, euismod in, pharetra a,
+								ultricies in, diam. Sed arcu. Cras consequat.
+							</p>
+						</div>
+						<div class="student-col">
+							<h5>
+								<span class="student-num">2/</span>
+								<span class="student-title">Search for your course</span>
+							</h5>
+							<p class="student-des">
+								Pellentesque odio nisi, euismod in, pharetra a,
+								ultricies in, diam. Sed arcu. Cras consequat.
+							</p>
+						</div>
+						<div class="student-col">
+							<h5>
+								<span class="student-num">3/</span>
+								<span class="student-title">Search for your course</span>
+							</h5>
+							<p class="student-des">
+								Pellentesque odio nisi, euismod in, pharetra a,
+								ultricies in, diam. Sed arcu. Cras consequat.
+							</p>
+						</div>
+						<div class="student-col">
+							<h5>
+								<span class="student-num">4/</span>
+								<span class="student-title">Search for your course</span>
+							</h5>
+							<p class="student-des">
+								Pellentesque odio nisi, euismod in, pharetra a,
+								ultricies in, diam. Sed arcu. Cras consequat.
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -114,6 +175,7 @@
 				<li>Home</li>
 				<li>Demo</li>
 				<li>Pages</li>
+
 				<li>Blog</li>
 				<li>Shop</li>
 				<li>Contact</li>
