grid layout responsive css

--- a/index.html
+++ b/index.html
@@ -119,52 +119,69 @@
 					/>
 				</div>
 				<div class="students-col">
-					<h3 class="section-title">Enjoy Your Best Student Life</h3>
-					<p class="section-title-description">
-						ed pretium, ligula sollicitudin laoreet viverra, tortor
-						libero sodales leo, eget blandit nunc tortor eu nibh.
-						Nullam mollis. Ut justo. Suspendisse potenti.
-					</p>
-					<div class="students-grid">
-						<div class="student-col">
-							<h5>
-								<span class="student-num">1/</span>
-								<span class="student-title">Search for your course</span>
-							</h5>
-							<p class="student-des">
-								Pellentesque odio nisi, euismod in, pharetra a,
-								ultricies in, diam. Sed arcu. Cras consequat.
-							</p>
-						</div>
-						<div class="student-col">
-							<h5>
-								<span class="student-num">2/</span>
-								<span class="student-title">Search for your course</span>
-							</h5>
-							<p class="student-des">
-								Pellentesque odio nisi, euismod in, pharetra a,
-								ultricies in, diam. Sed arcu. Cras consequat.
-							</p>
-						</div>
-						<div class="student-col">
-							<h5>
-								<span class="student-num">3/</span>
-								<span class="student-title">Search for your course</span>
-							</h5>
-							<p class="student-des">
-								Pellentesque odio nisi, euismod in, pharetra a,
-								ultricies in, diam. Sed arcu. Cras consequat.
-							</p>
-						</div>
-						<div class="student-col">
-							<h5>
-								<span class="student-num">4/</span>
-								<span class="student-title">Search for your course</span>
-							</h5>
-							<p class="student-des">
-								Pellentesque odio nisi, euismod in, pharetra a,
-								ultricies in, diam. Sed arcu. Cras consequat.
-							</p>
+					<div class="student-content">
+						<h3 class="section-title">
+							Enjoy Your Best Student Life
+						</h3>
+						<p class="section-title-description">
+							ed pretium, ligula sollicitudin laoreet viverra,
+							tortor libero sodales leo, eget blandit nunc tortor
+							eu nibh. Nullam mollis. Ut justo. Suspendisse
+							potenti.
+						</p>
+						<div class="students-grid">
+							<div class="student-col">
+								<h5>
+									<span class="student-num">1/</span>
+									<span class="student-title"
+										>Search for your course</span
+									>
+								</h5>
+								<p class="student-des">
+									Pellentesque odio nisi, euismod in, pharetra
+									a, ultricies in, diam. Sed arcu. Cras
+									consequat.
+								</p>
+							</div>
+							<div class="student-col">
+								<h5>
+									<span class="student-num">2/</span>
+									<span class="student-title"
+										>Search for your course</span
+									>
+								</h5>
+								<p class="student-des">
+									Pellentesque odio nisi, euismod in, pharetra
+									a, ultricies in, diam. Sed arcu. Cras
+									consequat.
+								</p>
+							</div>
+							<div class="student-col">
+								<h5>
+									<span class="student-num">3/</span>
+									<span class="student-title"
+										>Search for your course</span
+									>
+								</h5>
+								<p class="student-des">
+									Pellentesque odio nisi, euismod in, pharetra
+									a, ultricies in, diam. Sed arcu. Cras
+									consequat.
+								</p>
+							</div>
+							<div class="student-col">
+								<h5>
+									<span class="student-num">4/</span>
+									<span class="student-title"
+										>Search for your course</span
+									>
+								</h5>
+								<p class="student-des">
+									Pellentesque odio nisi, euismod in, pharetra
+									a, ultricies in, diam. Sed arcu. Cras
+									consequat.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
